# cookiecutter-pyproject

./: .gitignore  cookiecutter.json  pyproject.toml
src/{{ cookiecutter.project_slug }}/: data_util.py
{{ cookiecutter.project_name }}/: .gitignore
